--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 __pycache__/
+.idea/
+.vscode/
+*.pyc
+*.pyo
+*.pyd
+*.swp
+/venv/
+/env/
+/node_modules/
+*.log
+.env
+config.ini
+/build/
+/dist/
+*.exe
+*.dll
